DuPont DevSB/src/objects/pse__Skill_Certification_Rating__c.object
<CustomObject>
    <customHelpPage>pse__SkillCertificationRatingHelp</customHelpPage>
    <description>Records a resource&apos;s proficiency rating in a skill/certification.</description>
    <fields>
        <fullName>FF_PSA_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FF_PSA_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FF_PSA_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Propose_Rating__c</fullName>
        <label>Propose Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1 - Development Needed</fullName>
                </value>
                <value>
                    <fullName>2 - Meets Performance</fullName>
                </value>
                <value>
                    <fullName>3 - Exceeds Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Evaluation_Date__c</fullName>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Numerical_Rating__c</fullName>
        <formula>IF(ISNUMBER( LEFT(TEXT(pse__Rating__c),2)),
VALUE(LEFT(TEXT(pse__Rating__c),2)),
VALUE(LEFT(TEXT(pse__Rating__c),1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerical Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1 - Development Needed</fullName>
                </value>
                <value>
                    <fullName>2 - Meets Performance</fullName>
                </value>
                <value>
                    <fullName>3 - Exceeds Performance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Skill and Certification Ratings</relationshipLabel>
        <relationshipName>Skill_Certification_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Certification__c</fullName>
        <label>Skill / Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Resource Ratings</relationshipLabel>
        <relationshipName>Resource_Ratings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Skill / Certification Rating</label>
    <listViews>
        <fullName>Skill_and_Certifications_Ratings</fullName>
        <columns>NAME</columns>
        <columns>pse__Skill_Certification__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>FF_PSA_Propose_Rating__c</columns>
        <columns>pse__Rating__c</columns>
        <columns>FF_PSA_Manager__c</columns>
        <columns>pse__Notes__c</columns>
        <columns>pse__Evaluation_Date__c</columns>
        <columns>pse__Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Skill and Certifications Ratings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Rating{0000000}</displayFormat>
        <label>Rating Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill and Certification Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Check_Resource</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN(pse__Resource__c) &gt;  0,  NOT( pse__Resource__r.pse__Is_Resource__c))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>Resource lookup must be set to an Contact with Is Resource = true</errorMessage>
    </validationRules>
</CustomObject>